# game-c-

./: CMakeLists.txt  Doxyfile_game  Doxyfile_platform  README.md  game.cpp  game.h  platform_common.cpp  renderer.cpp  tests_game.cpp  utils.cpp  win.cpp  win32_platform.cpp
docs_game/html/: doxygen_crawl.html  files.html  game_8cpp.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  menudata.js
docs_game/html/search/: all_0.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  defines_1.js  enums_0.js  enumvalues_0.js  functions_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js
docs_platform/html/: annotated.html  classes.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_eval.html  index.html  menudata.js  platform_8cpp.html  structButton__State-members.html  structButton__State.html  structInput-members.html  structInput.html
docs_platform/html/search/: all_0.js  all_2.js  all_3.js  classes_0.js  enumvalues_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
platform_common/: platform_common.cpp
test/: CMakeLists.txt  main.cpp
